<resources>
    <string name="app_name">Raw2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BATU</string>
    <string name="nav_header_subtitle">www.google.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">FirstYear</string>
    <string name="menu_gallery">SecondYear</string>
    <string name="menu_slideshow">ThirdYear</string>
    <string name="menu_tools">FourthYear</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Online Result</string>
</resources>
