<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_FirstYear"
            android:icon="@drawable/ic_book"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_secondYear"
            android:icon="@drawable/ic_book"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_thirdYear"
            android:icon="@drawable/ic_book"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_fourthYear"
            android:icon="@drawable/ic_book"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>

            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_wifi"
                android:title="@string/menu_send" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />

        </menu>
    </item>

</menu>
